fix handling exiting VR for legacy; abstract legacy Fullscreen logic

--- a/WebGLTemplates/WebVR/css/webvr.css
+++ b/WebGLTemplates/WebVR/css/webvr.css
@@ -18,7 +18,7 @@
   outline: 0;
 }
 
-.btnEnterVr {
+.btnToggleVr {
   background-image: url(../TemplateData/vr-enter.svg);
   background-position: 50% 7px;
   background-repeat: no-repeat;
