--- a/WebGLTemplates/WebVR/css/webvr.css
+++ b/WebGLTemplates/WebVR/css/webvr.css
@@ -10,6 +10,7 @@
   height: 38px;
   margin-left: 0.75rem;
   min-width: 70px;
+  opacity: 0.85;
   padding: 0 0.75rem;
   position: relative;
   text-indent: -9999px;
@@ -20,6 +21,7 @@
 
 .btn:hover {
   box-shadow: inset 0 0 0 2px rgba(0,0,0,.5);
+  opacity: 1;
 }
 
 .btn:focus {
