simplify selectors for disabling Fullscreen+VR buttons until ready

--- a/WebGLTemplates/WebVR/css/webvr.css
+++ b/WebGLTemplates/WebVR/css/webvr.css
@@ -7,9 +7,7 @@
   cursor: progress;
   opacity: 0.65;
 }
-[data-unity-loaded="false"] .btn {
-  pointer-events: none;
-}
+[data-unity-loaded="false"] .btn,
 [data-vr-loaded="false"] .vrBtn {
   pointer-events: none;
 }
